<resources>
    <string name="app_name">FlybounceMain_V01</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tMemName">Member Name</string>
    <string name="tNameHint">Name</string>
    <string name="tMobileNo">Mobile No</string>
    <string name="tdor">Registration Date</string>
    <string name="tTime">Start Time</string>
    <string name="tCourtAvail">Courts Available</string>
    <string name="tDurationMonthly">Monthly</string>
    <string name="tDurationQuarterly">Quarterly</string>
    <string name="tDurationYearly">Yearly</string>
    <string name="tDateFormat">dd-MMM-yyyy</string>
    <string name="tInputDateFormat">dd-MM-yyyy</string>
    <string name="tRenewal_Date_String">Renewal Date: </string>
    <string name="tSearchHint">Search by name or mobile number</string>


    <string name="RENEWAL_DATE_REPLACE_STRING">#RENEWAL_DATE#</string>
    <string name="BANK_DETAILS_REPLACE_STRING">#BANK_DETAILS#</string>
    <!--*** Below properties Has to go into Settings page-->

    <integer name="notification_timeOf_day">20</integer>
    <integer name="notification_advance_days">5</integer>
    <integer name="notification_interval_days">2</integer>

    <string name="SMSBody">Dear Member, Your membership is coming up for renewal on #RENEWAL_DATE#.
                            Please share payment reference. Please find the bank details
                            #BANK_DETAILS#</string>
    <string name="bankDetails">FLYBOUNCE SPORTS LLP
Current Ac no : 313205000044
IFSC Code : ICIC0003132</string>
    <string name="search_title">Search Member</string>
    <string name="search_hint">Enter name</string>
    <string name="tPayment_reference">Payment Reference</string>

    <!--*** Above properties Has to go into Settings page-->

    <string-array name="TimeArray">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>

    </string-array>
    <string-array name="CourtArray">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="Plan_names">
        <item>WEEKDAYS</item>
        <item>WEEKENDS</item>
        <item>ALLDAYS</item>
    </string-array>


</resources>
