<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TableLayout
        android:id="@+id/tableLayoutOuter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:text="@string/tMemName"
                android:textSize="@dimen/appTextSize" />

            <EditText
                android:id="@+id/edittext_membername"
                android:layout_column="2"
                android:hint="@string/tNameHint"
                android:inputType="textPersonName"
                android:text="MyName"
                android:textSize="@dimen/appTextSize" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_column="1"
                android:gravity="center_vertical"
                android:text="@string/tMobileNo"
                android:textSize="@dimen/appTextSize" />

            <EditText
                android:id="@+id/editext_mobileno"
                android:layout_column="2"
                android:inputType="phone"
                android:text="1223457"
                android:textSize="@dimen/appTextSize" />
        </TableRow>

    </TableLayout>

    <View
        android:id="@+id/view3"
        android:layout_width="344dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayoutOuter"
        tools:layout_editor_absoluteX="8dp" />


    <TableLayout
        android:id="@+id/tableLayoutInner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:divider="@android:drawable/bottom_bar"
        android:padding="3dp"
        android:stretchColumns="1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutOuter">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/tdor"
                android:textSize="@dimen/appTextSize" />

            <EditText
                android:id="@+id/editText_startdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".75"
                android:ems="10"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/button_DatePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                app:srcCompat="@drawable/ic_date_range_black_24dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/tTime"
                android:textSize="@dimen/appTextSize" />

            <Spinner
                android:id="@+id/spinnerTimeSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".50" />


            <!--            <ImageButton
                            android:id="@+id/imageButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight=".25"
                            app:srcCompat="@drawable/ic_access_time_black_24dp" />-->

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Court No: "
                android:textSize="@dimen/appTextSize" />

            <Spinner
                android:id="@+id/spinnerCourtSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/CourtArray" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Duration"
                android:textSize="@dimen/appTextSize" />

            <RadioGroup
                android:id="@+id/radioGroupDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/radioButton_Monthly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Monthly" />

                <RadioButton
                    android:id="@+id/radioButton_Quarterly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Quarterly" />

                <RadioButton
                    android:id="@+id/radioButton_Yearly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yearly" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="Plan"
                android:textSize="@dimen/appTextSize" />

            <Spinner
                android:id="@+id/spinner_PlanSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/Plan_names" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingTop="10dp"
                android:text="Membership Type"
                android:textSize="@dimen/appTextSize" />

            <RadioGroup
                android:id="@+id/radioGroup_MemberType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_MemType_IM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="IM" />

                <RadioButton
                    android:id="@+id/radioButton_MemType_FC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="FC" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <View
                android:id="@+id/view6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingTop="10dp"
                android:text="Payment"
                android:textSize="@dimen/appTextSize" />

            <RadioGroup
                android:id="@+id/radioGroup_PAID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_MemType_PAID_YES"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Yes" />

                <RadioButton
                    android:id="@+id/radioButton_MemType_PAID_NO"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></View>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:paddingTop="10dp"
                android:text="@string/tPayment_reference"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText_PaymentReference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"></View>

            <Button
                android:id="@+id/button_courtsAvailable"
                android:text="@string/tCourtAvail" />


        </TableRow>

    </TableLayout>


    <View
        android:id="@+id/viewLine2"
        android:layout_width="344dp"
        android:layout_height="1dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayoutInner"
        tools:layout_editor_absoluteX="8dp" />
    <TableLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="136dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayoutInner"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/button_addMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add" />

            <Button
                android:id="@+id/button_tempDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />

            <Button
                android:id="@+id/button_tempSetAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set Alarm" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/editTextMultiLine"
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:text="Hello"
        android:textSize="8sp"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        tools:layout_editor_absoluteX="8dp" />

</android.support.constraint.ConstraintLayout>
